--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     
-    <p>sdada</p>
+    <p>Тестовое задание</p>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
+    <script src="new.js"></script>
 </body>
 </html>
