--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 
     <!-- <script src="script.js"></script> -->
     <script src="new.js"></script>
+    <!-- <script src="js.js"></script> -->
 </body>
 </html>
