--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- <script src="script.js"></script> -->
     <script src="new.js"></script>
+    <!-- <script src="new2.js"></script> -->
     <!-- <script src="js.js"></script> -->
 </body>
 </html>
