--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
     <p>Тестовое задание</p>
 
     <!-- <script src="script.js"></script> -->
-    <script src="new.js"></script>
+    <!-- <script src="new.js"></script> -->
     <!-- <script src="new2.js"></script> -->
     <!-- <script src="js.js"></script> -->
+    <!-- <script src="new8.js"></script> -->
+    <!-- <script src="new10.js"></script>
+    <script src="new11.js"></script> -->
+    <script src="new20.js"></script>
+    <!-- <script src="foreach.js"></script> -->
+    <!-- <script src="new25.js"></script> -->
+    <!-- <script src="forin.js"></script> -->
 </body>
 </html>
